<resources>
    <string name="app_name">CustoViagem</string>
    <string name="ditancia">Ditancia</string>
    <string name="total_de_kms">Kms</string>
    <string name="valor">Valor</string>
    <string name="custo_litro">Custo Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="seu_gasto_total">SEU GASTO TOTAL É:</string>
    <string name="valor_total">R$:</string>
    <string name="calcular">calcular</string>
</resources>